--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,128 @@ nav button:hover {
 .modal-content button:hover {
   background-color: #0056b3;
 }
+
+.container {
+  height: 85vh;
+  margin-top: 10vh;
+  flex-grow: 1;
+  padding: 20px;
+  overflow-y: auto;
+  margin-left: 250px;
+}
+
+/* Table */
+table {
+  width: 100%;
+  max-height: 50vh;
+  border-collapse: collapse;
+  font-size: 16px;
+  text-align: left;
+}
+
+thead {
+  background-color: #007bff;
+  color: white;
+}
+
+th,
+td {
+  padding: 12px;
+  border: 1px solid #ddd;
+  text-align: center;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+td:last-child,
+th:last-child {
+  width: 180px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+tbody tr:hover {
+  background-color: #ddd;
+  transition: background-color 0.3s;
+}
+
+/* Edit Button */
+.edit-btn {
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  color: white;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  background-color: #ffc107; /* Yellow */
+  margin: 4px;
+}
+
+.edit-btn:hover {
+  background-color: #e0a800;
+  transform: scale(1.05); /* Slight pop effect */
+}
+
+/* Delete Button */
+.delete-btn {
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 8px; /* Rounded corners */
+  font-size: 14px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  color: white;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  background-color: #dc3545; /* Red */
+  margin: 4px;
+}
+
+.delete-btn:hover {
+  background-color: #c82333;
+  transform: scale(1.05);
+}
+
+/* Deactivate Button */
+.deactivate-btn {
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 8px; /* Rounded corners */
+  font-size: 14px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  color: white;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  background-color: #6c757d; /* Gray */
+  margin: 4px;
+}
+
+.deactivate-btn:hover {
+  background-color: #5a6268;
+  transform: scale(1.05);
+}
+
+.add-vendor-btn {
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 12px 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin-top: 10px;
+  margin-bottom: 1vh;
+  align-self: flex-start;
+}
+
+.add-vendor-btn:hover {
+  background-color: #0056b3;
+}
