--- a/assetsAd/css/style1.css
+++ b/assetsAd/css/style1.css
@@ -250,6 +250,10 @@ h6 {
   padding: 0 20px 20px 20px;
 }
 
+.c-body1 {
+  padding: 0 20px 20px 20px;
+}
+
 .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.6);
 }
