--- a/assetsAd/css/style1.css
+++ b/assetsAd/css/style1.css
@@ -1269,25 +1269,44 @@ table {
 th, td {
   padding: 10px;
   text-align: left;
-  border: 1px solid #ddd;
+  border: 0px solid #ddd;
 }
 
 th {
-  background-color: #800000; /* Light Maroon */
+  background-color: #800000;
   color: white;
 }
 
 tbody tr:nth-child(odd) {
-  background-color: #fff; /* White */
+  background-color: #fff; 
 }
 
 tbody tr:nth-child(even) {
-  background-color: #f2f2f2; /* Light Grey */
+  background-color: #f2f2f2;
+}
+#filterInputProduct {
+  background-color: #f0f0f0;
+  color: #333;
+  border: 1px solid #2f0000; 
+  padding: 10px; 
+  border-radius: 5px; 
+}
+
+#filterInputProduct::placeholder {
+  color: #888; 
 }
 
 /* Filter input field */
 .filter-input {
   margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+  max-width: 300px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+}
+
+.filter-input1 {
   padding: 10px;
   width: 100%;
   max-width: 300px;
@@ -1302,7 +1321,7 @@ tbody tr:nth-child(even) {
   }
 
   th, td {
-      font-size: 14px;
+      font-size: 10px;
       padding: 8px;
   }
 }
